--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -301,10 +301,18 @@ section {
     text-align: center;
 }
 
-
-.work-grid-item.runbuddy {
+.work-grid-item.victors {
     grid-column: 1 / span 2;
     grid-row: 1 / span 2;
+    background-image: url(../Images/Screen\ Shot\ 2021-02-08\ at\ 3.07.05\ PM.png);
+    background-size: cover;
+    color: var(--secondary-color);
+}
+
+
+.work-grid-item.runbuddy {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
     background-image: url(../Images/run-buddy-screenshot.png);
     background-size: cover;
 }
